# trade-copier-backend

./: .gitignore  DEPLOY.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0da1c7dde3f7_create_users_table.py  4aed72fd6c0c_create_execution_logs_table.py  75ead612512c_create_exchange_accounts_table.py  9acf2978cc96_create_execution_logs_table.py  b21153173943_add_run_id_to_execution_logs.py
app/: main.py
app/api/: guards.py  router.py
app/core/: config.py  crypto.py  execution_modes.py  execution_request.py  master_position.py  order_validation.py  position_sync.py  risk.py  security.py  trading.py
app/db/: session.py
app/exchanges/: adapter_factory.py  adapter_models.py  adapter_registry.py  base.py  base_adapter.py  binance_adapter.py  bingx_adapter.py  bingx_endpoints.py  bingx_signing.py  bitget_adapter.py  bybit_adapter.py  credentials.py  credentials_provider.py  exceptions.py  factory.py  http_client.py  http_client_provider.py  okx_adapter.py  stub_live_adapter.py
app/models/: __init__.py  exchange_account.py  user.py  (+1 more)
tests/: test_bingx_adapter.py  test_copier_dispatch_routes.py  test_copier_orchestration_service.py  test_copier_pipeline_integration.py  test_copier_plan_execution_service.py  test_copier_plan_runner_service.py  test_copier_planning_service.py  test_exchange_client_service.py  test_execution_engine.py  test_execution_idempotency.py  test_live_execution_service.py  test_manual_dispatch_service.py  test_master_position.py  test_master_position_handler.py  test_order_request_validation_service.py  test_position_sync.py
(+36 files in other folders)
